fixed the issue on mobiles, used the hidden-xs class on the element to hide it on mobiles + had to comment out some margin left for the section ids - not sure why they were there.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,12 +8,12 @@ svg {
     .same-height {
         height: auto !important;
     }
-    #sidebar {
+/*    #sidebar {
         display: none; 
         width: 0;
-    }
+    }*/
     #eq-body{
-        width: auto !important;    
+     /*   width: auto !important;    */
     }
 }
 
@@ -44,6 +44,6 @@ ul.nav-pills {
   
   @media screen and (max-width: 810px) {
     #section1, #section2, #section3, #section4, #section5, #section6  {
-        margin-left: 150px;
+/*        margin-left: 150px;*/
     }
   }
